update form and new dog page

--- a/app/views/dogs/new.hbs
+++ b/app/views/dogs/new.hbs
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1>create a dog</h1>
-    <form action="/dogs/123?_method=DELETE" method="post">
-      <!-- <label for="dogName"></label>
-      <input id="dogName" type="text" name="name">
+    <form action="/dogs" method="post">
+      <label for="dogName"></label>
+      <input id="dogName" type="text" name="name" placeholder="name">
       <label for="dogAge"></label>
-      <input id="dogAge" type="text" name="age"> -->
+      <input id="dogAge" type="text" name="age" placeholder="age">
       <input type="submit" value="Create New Dog">
     </form>
   </body>
