--- a/app/views/dogs/new.hbs
+++ b/app/views/dogs/new.hbs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>New</title>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <h1>create a dog</h1>
