done class 4/18, add more html and forms and routes, still need to get the adding work for some reason

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
 h1 {
-  text-decoration: underline; 
+  text-decoration: underline;
+}
+
+#edit {
+  background-color: lightblue;
+  height: 50px;
+  width: 50px;
 }
