--- a/app/views/dogs/index.hbs
+++ b/app/views/dogs/index.hbs
@@ -7,7 +7,22 @@
   </head>
   <body>
     <h1>Doglist</h1>
-    <a href="./dogs/new"><button type="button" name="create">Add a new dog</button>
+    <a href="./dogs/new"><button type="button" name="create">Add a new dog</button></a>
+
+    <a href="./dogs/edit"><p id="edit">edit this  </p></a>
+
+    <div id="dogs">
+      <h2>Dogs listed here</h2>
+
+        <!-- {{#each dogs}}
+        <p id="dogName">{{name}}</p>
+        <p id="dogAge">{{age}} years old</p>
+        <p id="dogId">{{id}}</p>
+        {{/each}} -->
+        <p id="dogName">{{name}}</p>
+        <p id="dogAge">{{age}} years old</p>
+
+    </div>
 </a>
   </body>
 </html>
